meson: build the dbd tool without Berkeley DB and superfluous dependencies
break out the dbd source code from cnid_dbd and move it into its own module,
removing superfluous sources, dependencies, and header includes

at one point in the past this tool was probably thightly coupled with
the Berkeley DB database interface, but now it uses the CNID backend interface

this allows you to build dbd even when Berkeley DB isn't available,
because it can, unlike what the name suggests, operate on any CNID backend

--- a/etc/meson.build
+++ b/etc/meson.build
@@ -1,10 +1,14 @@
 if have_spotlight
     subdir('spotlight')
 endif
+
 subdir('afpd')
-subdir('cnid_dbd')
 subdir('netatalk')
 subdir('uams')
+
+if use_dbd_backend
+    subdir('cnid_dbd')
+endif
 
 if have_appletalk
     subdir('atalkd')
