testsuite: Enhance afp_speedtest with statistics, CSV export, and Local mode
Major enhancements to afp_speedtest for comprehensive performance analysis:

New Features:
- CSV output mode (-c): three tables for test data, size summary, TCP metrics
- Local mode (-L -P): direct filesystem I/O baseline benchmarking with O_DIRECT
- File size sweep (-z): test multiple sizes, default 18-size sweep (4KB-512MB)
- Statistics: mean, median, standard deviation, percentiles, coefficient of variation
- Warmup runs (-W): excluded from statistics to reduce cold-start bias
- TCP metrics tracking: evolution table showing initial vs final network state (AFP mode)
- Delay between iterations (-t): for cooling down or simulating usage patterns
- O_DIRECT auto-enable: Local mode defaults to direct I/O for AFP comparison (-D to disable)

Improvements:
- Fix Local mode (-L) implementation with proper VFS abstraction
- Add proper file size units display (KB for <1MB, MB for ≥1MB)
- Add mode-appropriate configuration display
- Add division by zero guards for sub-microsecond operations

Documentation:
- Comprehensive man page update with all flags, modes, and examples
- CSV format specification and output mode descriptions

Build:
- Add -lm linker flag for statistics math functions
- Enhanced test_failed() with file:line debugging info

Validated with default 18-size sweep in both AFP and Local modes (exit code 0).

--- a/test/testsuite/meson.build
+++ b/test/testsuite/meson.build
@@ -72,13 +72,15 @@ executable(
 
 speedtest_sources = [
     'speedtest.c',
+    'speedtest_local_vfs.c',
+    'afp_tcp_analytics.c',
 ]
 
 executable(
     'afp_speedtest',
     speedtest_sources,
     include_directories: root_includes,
-    link_args: ['-rdynamic'],
+    link_args: ['-rdynamic', '-lm'],
     link_with: libafptest,
     install: true,
     install_rpath: rpath_libdir,
