meson: detect and configure endianness preprocessor flag
replace the Autotool-ism for endianness macro that doesn't work with Meson,
with some surrounding cleanup

we can now build with big-endian byte order support on f.e. s390x architecture

--- a/meson.build
+++ b/meson.build
@@ -228,6 +228,10 @@ endif
 
 add_global_link_arguments(netatalk_common_link_args, language: 'c')
 
+if host_machine.endian() == 'big'
+    cdata.set('WORDS_BIGENDIAN', 1)
+endif
+
 #################
 # Header checks #
 #################
