dircache: Add afpd cross-process cache sync via IPC hint pipe
Resolves stale dircache across AFP clients through a parent-mediated
hint relay system. When one afpd child modifies the filesystem, it
sends a lightweight hint (8-byte: event type + VID + CNID) to the
parent via the existing IPC socketpair. The parent broadcasts to
sibling children via pipe, who process hints as Events when not
processing AFP commands.

Hint pipe infrastructure:
  Dedicated pipe() per child alongside existing IPC socketpair.
  Isolates hint data from session transfer send_fd()/recv_fd() to
  prevent SIGURG race conditions. Both ends set O_NONBLOCK. Pipe
  writes ≤ PIPE_BUF are POSIX-guaranteed atomic (22-byte messages).

IPC protocol (server_ipc.h/c):
  IPC_CACHE_HINT command type with packed ipc_cache_hint_payload.
  Three hint types: REFRESH (ostat + dir_modify), DELETE (direct
  dir_remove), DELETE_CHILDREN (dircache_remove_children + parent).
  _Static_assert for PIPE_BUF atomicity and IPC_HEADERLEN portability.
  Bounds checks on ipc_cmd_str[] access in both reader and writer.

Parent relay (ipc_relay_cache_hint):
  Snapshots sibling hint pipe fds under lock, releases lock before
  write loop. Non-blocking write() drops hints on EAGAIN gracefully.

Receiver (process_cache_hints in dircache.c):
  Direct hash_lookup() for O(1) CNID resolution (supports both files
  and directories). Three-way dispatch with DCMOD_NO_PROMOTE flag to
  prevent cross-user ARC pollution. 32-hint per-cycle cap.

Event-driven processing:
  poll() wrapper before dsi_stream_receive() monitors both dsi->socket
  and hint_fd. Processes hints during idle client wait, eliminating
  latency for idle connections. DSI readahead buffer check prevents
  deadlock when application-level buffer has pre-read data.

Hint sender call sites (25 calls across 7 files):
  REFRESH: setfilparams, setdirparams (AD + perms), setextattr,
  remextattr, setacl (2 paths), addcomment, rmvcomment, closefork,
  exchangefiles (2), moveandre

--- a/test/afpd/meson.build
+++ b/test/afpd/meson.build
@@ -2,6 +2,7 @@ test_sources = [
     'afpfunc_helpers.c',
     'subtests.c',
     'test.c',
+    meson.project_source_root() / 'etc/afpd/ad_cache.c',
     meson.project_source_root() / 'etc/afpd/afp_config.c',
     meson.project_source_root() / 'etc/afpd/afp_dsi.c',
     meson.project_source_root() / 'etc/afpd/afp_options.c',
