create fuzz testing framework with libfuzzer and ClusterFuzzLite
a simple fuzz test that feeds fuzzed data into a few basic file
operations: create dir, create file, get params, delete

the fuzz tests can be ran stand-alone on a local machine,
but we also leverage the ClusterFuzzLite runners to execute
the fuzz tests in GitHub Actions

note that Google's oss-fuzz-base/base-builder container image
is using an older base OS at the time of writing, so the version of
meson that is available is too old to build netatalk; the workaround
is to install the packaged python version of meson with pip

--- a/meson.build
+++ b/meson.build
@@ -2413,7 +2413,7 @@ if 'none' not in init_style
     subdir('distrib')
 endif
 
-if get_option('with-tests') or get_option('with-testsuite')
+if get_option('with-tests') or get_option('with-testsuite') or get_option('with-fuzzing')
     subdir('test')
 endif
 
