--- a/meson_options.txt
+++ b/meson_options.txt
@@ -202,6 +202,18 @@ option(
     description: 'Compile the AFP test suite',
 )
 option(
+    'with-fuzzing',
+    type: 'boolean',
+    value: false,
+    description: 'Build libFuzzer-based fuzz targets for afpd',
+)
+option(
+    'with-fuzzing-engine',
+    type: 'string',
+    value: '',
+    description: 'Path to fuzzing engine library (e.g. $LIB_FUZZING_ENGINE for OSS-Fuzz)',
+)
+option(
     'with-unicode-data',
     type: 'boolean',
     value: false,
