--- a/config/pam/meson.build
+++ b/config/pam/meson.build
@@ -7,5 +7,5 @@ netatalk_pamd = configure_file(
 if (fs.exists(pam_confdir / 'netatalk') and not get_option('with-overwrite'))
     message('will not replace existing', pam_confdir / 'netatalk')
 else
-    install_data(netatalk_pamd, install_dir: pam_confdir)
+    install_data(netatalk_pamd, install_dir: pam_confdir, install_tag: 'config')
 endif
