ci: standardize workflow conditions and syntax
this removes file path conditions except where absolutely necessary,
the argument being that the build system operate on all of these files
and there may be unexpected dependencies

also minor cleanup of the syntax in the headers of all workflows

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -1,23 +1,18 @@
 name: Containers
+
 on:
   push:
-    branches: ["main"]
-    paths-ignore:
-      - "**.md"
-      - "**/COPYING"
-      - "**/README*"
-      - ".github/workflows/build.yml"
-      - "contrib/webmin_module/**"
-      - "COPYRIGHT"
+    branches:
+      - main
+      - branch-*
   pull_request:
-    branches: ["main"]
-    paths-ignore:
-      - "**.md"
-      - "**/COPYING"
-      - "**/README*"
-      - ".github/workflows/build.yml"
-      - "contrib/webmin_module/**"
-      - "COPYRIGHT"
+    branches:
+      - main
+      - branch-*
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 permissions:
   contents: read
